# game-of-life

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: stories.md
src/game_of_life/: __init__.py  __main__.py  hello.py  main.py
src/game_of_life/core/: __init__.py  game.py  grid.py
src/game_of_life/ui/: renderer.py
tests/: test_hello.py
tests/core/: test_game.py  test_grid.py
