[project]
name = "game-of-life"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hai Sam", email = "thehai-sam@retty.me" }
]
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.2.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/game_of_life"]

[project.scripts]
game-of-life = "game_of_life.main:main"